--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,9 @@
 {
-  "sqltools.connections": [
-    {
-      "previewLimit": 50,
-      "server": "127.0.0.1",
-      "port": 26257,
-      "driver": "PostgreSQL",
-      "name": "cockroach",
-      "group": "nakama",
-      "database": "nakama",
-      "username": "root",
-      "password": ""
-    }
-  ]
+  "editor.inlineSuggest.enabled": true,
+  "gopls": {
+    "ui.semanticTokens": true
+  },
+  "redhat.telemetry.enabled": true,
+  "window.zoomLevel": 1,
+  "workbench.iconTheme": "material-icon-theme"
 }
